--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "js.cookie": "^0.0.4",
+    "jstz": "^2.1.1",
+    "local-time": "^2.1.0",
     "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
   },
