Sign in with Google

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
+require: rubocop-rails
+
 AllCops:
-  TargetRubyVersion: 2.5
+  TargetRubyVersion: 3.1
   Include:
     - 'app/**/*.rb'
     - 'lib/**/*.rb'
@@ -9,17 +11,16 @@ AllCops:
     - 'config/**/*'
     - 'db/**/*.rb'
     - 'node_modules/**/*'
+  NewCops: enable
+  SuggestExtensions: false
 
 ###############################################################################
 #                              L A Y O U T                                    #
 ###############################################################################
-Layout/AlignArray:
+Layout/ArgumentAlignment:
   Enabled: false
 
-Layout/AlignHash:
-  Enabled: false
-
-Layout/AlignParameters:
+Layout/ArrayAlignment:
   Enabled: false
 
 Layout/EmptyLineAfterGuardClause:
@@ -43,7 +44,16 @@ Layout/EmptyLinesAroundModuleBody:
 Layout/ExtraSpacing:
   Enabled: false
 
+Layout/HashAlignment:
+  Enabled: false
+
+Layout/LineLength:
+  Max: 2000
+
 Layout/MultilineOperationIndentation:
+  Enabled: false
+
+Layout/ParameterAlignment:
   Enabled: false
 
 Layout/SpaceAroundOperators:
@@ -55,6 +65,9 @@ Layout/SpaceAfterColon:
 Layout/SpaceAfterComma:
   Enabled: false
 
+Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+
 Layout/SpaceBeforeBlockBraces:
   Enabled: false
 
@@ -64,7 +77,7 @@ Layout/SpaceInsideBlockBraces:
 Layout/SpaceInsideHashLiteralBraces:
   Enabled: false
 
-Layout/TrailingBlankLines:
+Layout/TrailingEmptyLines:
   Enabled: false
 
 Lint/AmbiguousOperator:
@@ -73,10 +86,22 @@ Lint/AmbiguousOperator:
 Lint/AssignmentInCondition:
   Enabled: false
 
-Lint/HandleExceptions:
+Lint/MissingSuper:
+  Enabled: false
+
+Lint/RaiseException:
+  Enabled: false
+
+Lint/RedundantSafeNavigation:
   Enabled: false
 
 Lint/RescueException:
+  Enabled: false
+
+Lint/SuppressedException:
+  Enabled: false
+
+Lint/StructNewOverride:
   Enabled: false
 
 ###############################################################################
@@ -89,16 +114,13 @@ Metrics/BlockLength:
   Enabled: false
 
 Metrics/BlockNesting:
-  Max: 5
+  Max: 9
 
 Metrics/ClassLength:
   Max: 2000
 
 Metrics/CyclomaticComplexity:
   Max: 50
-
-Metrics/LineLength:
-  Max: 1000
 
 Metrics/MethodLength:
   Max: 500
@@ -118,16 +140,19 @@ Metrics/PerceivedComplexity:
 Naming/AccessorMethodName:
   Enabled: false
 
+Naming/BlockForwarding:
+  Enabled: false
+
 Naming/ConstantName:
   Enabled: false
 
 Naming/FileName:
   Enabled: false
 
-Naming/PredicateName:
+Naming/MethodParameterName:
   Enabled: false
 
-Naming/UncommunicativeMethodParamName:
+Naming/PredicateName:
   Enabled: false
 
 Naming/VariableNumber:
@@ -138,6 +163,12 @@ Naming/VariableNumber:
 ###############################################################################
 Rails:
   Enabled: true
+
+Rails/ContentTag:
+  Enabled: false
+
+Rails/DeprecatedActiveModelErrorsMethods:
+  Enabled: false
 
 Rails/DynamicFindBy:
   Enabled: false
@@ -151,10 +182,19 @@ Rails/FilePath:
 Rails/FindEach:
   Enabled: false
 
+Rails/HasManyOrHasOneDependent:
+  Enabled: false
+
 Rails/HelperInstanceVariable:
   Enabled: false
 
+Rails/I18nLocaleTexts:
+  Enabled: false
+
 Rails/InverseOf:
+  Enabled: false
+
+Rails/RakeEnvironment:
   Enabled: false
 
 Rails/SkipsModelValidations:
@@ -164,6 +204,9 @@ Rails/OutputSafety:
   Enabled: false
 
 Rails/UnknownEnv:
+  Enabled: false
+
+Rails/UniqueValidationWithoutIndex:
   Enabled: false
 
 Rails/Validation:
@@ -181,6 +224,9 @@ Security/Open:
 ###############################################################################
 #                                 S T Y L E                                   #
 ###############################################################################
+Style/AccessorGrouping:
+  Enabled: false
+
 Style/AndOr:
   Enabled: false
 
@@ -190,7 +236,10 @@ Style/AsciiComments:
 Style/BlockDelimiters:
   Enabled: false
 
-Style/BracesAroundHashParameters:
+Style/CaseLikeIf:
+  Enabled: false
+
+Style/HashLikeCase:
   Enabled: false
 
 Style/ClassAndModuleChildren:
@@ -223,10 +272,19 @@ Style/EmptyMethod:
 Style/EvalWithLocation:
   Enabled: false
 
+Style/ExponentialNotation:
+  Enabled: false
+
+Style/FloatDivision:
+  Enabled: false
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
 Style/GuardClause:
+  Enabled: false
+
+Style/HashEachMethods:
   Enabled: false
 
 Style/HashSyntax:
@@ -236,9 +294,6 @@ Style/IfUnlessModifier:
   Enabled: false
 
 Style/Lambda:
-  Enabled: false
-
-Style/MethodMissingSuper:
   Enabled: false
 
 Style/MissingRespondToMissing:
@@ -262,7 +317,13 @@ Style/NumericLiterals:
 Style/OneLineConditional:
   Enabled: false
 
+Style/OpenStructUse:
+  Enabled: false
+
 Style/ParallelAssignment:
+  Enabled: false
+
+Style/RedundantRegexpEscape:
   Enabled: false
 
 Style/RedundantReturn:
@@ -289,10 +350,22 @@ Style/SingleLineBlockParams:
 Style/SingleLineMethods:
   Enabled: false
 
+Style/SoleNestedConditional:
+  Enabled: false
+
+Style/StringConcatenation:
+  Enabled: false
+
 Style/StringLiterals:
   Enabled: false
 
 Style/SymbolArray:
+  Enabled: false
+
+Style/HashTransformKeys:
+  Enabled: false
+
+Style/HashTransformValues:
   Enabled: false
 
 Style/TrivialAccessors:
