--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "fickle",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0-alpha",
-    "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/ujs": "^6.0.0-alpha",
-    "@rails/webpacker": "^4.0.7",
-    "js.cookie": "^0.0.4",
+    "@rails/actioncable": "^7.0.3",
+    "@rails/activestorage": "^7.0.3",
+    "@rails/ujs": "^7.0.3",
+    "@rails/webpacker": "5.4.3",
+    "js-cookie": "^2.2.1",
     "jstz": "^2.1.1",
     "local-time": "^2.1.0",
     "stimulus": "^1.1.1",
