--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.8.0"
+  },
+  "scripts": {
+    "build": "yarn",
+    "build:css": "yarn"
   }
 }
